model Branch {
  id         String      @id @default(uuid())
  name       String
  address    String
  city       String?
  state      String?
  postalCode String?
  country    String?

  contactEmail  String?
  contactPhone  String?
  licenseNumber String?

  openTime  String?
  closeTime String?

  timezone   String      @default("UTC")
  isActive   Boolean     @default(true)
  tenantId   String
  tenant     Tenant      @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  createdAt  DateTime    @default(now())
  updatedAt  DateTime    @updatedAt
  classrooms Classroom[]
  children   Child[]
  broadcasts Broadcast[]
  users      User[]
}