model Broadcast {
  id        String            @id @default(uuid())
  title     String
  body      String
  priority  BroadcastPriority @default(NORMAL)
  audience  BroadcastAudience @default(BRANCH)
  createdAt DateTime          @default(now())

  tenantId String
  tenant   Tenant @relation(fields: [tenantId], references: [id], onDelete: Cascade)

  branchId String?
  branch   Branch? @relation(fields: [branchId], references: [id], onDelete: Cascade)

  createdBy String
  creator   User   @relation(fields: [createdBy], references: [id])

  @@index([tenantId, createdAt])
  @@index([branchId, createdAt])
}
