model Classroom {
  id            String @id @default(uuid())
  name          String
  ageGroup      String
  legalCapacity Int
  ratioLimit    Int 
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  branchId String
  branch   Branch @relation(fields: [branchId], references: [id], onDelete: Cascade)

  children Child[]
  shifts   Shift[]
  users    User[]
}
