model User {
  id                 String    @id @default(uuid())
  name               String
  email              String    @unique
  emailVerified      Boolean   @default(false)
  role               Role      @default(GUARDIAN)
  isActive           Boolean   @default(true)
  needPasswordChange Boolean   @default(false)
  isDeleted          Boolean   @default(false)
  deletedAt          DateTime?
  image              String?
  createdAt          DateTime  @default(now())
  updatedAt          DateTime  @updatedAt

  tenantId         String?
  tenant           Tenant?    @relation(fields: [tenantId], references: [id])
  branchId         String?
  branch           Branch?    @relation(fields: [branchId], references: [id])
  classroomId      String?
  classroom        Classroom? @relation(fields: [classroomId], references: [id])
  sessions         Session[]
  accounts         Account[]
  approvedChildren Child[]    @relation("ChildApprovedBy")

  guardianProfile ChildGuardian[]

  acceptedInvitation Invitation?

  shifts     Shift[]
  timesheets Timesheet[]

  uploadedMedia   Media[]
  signedDocuments Document[]

  sentMessages Message[]

  createdBroadcasts Broadcast[]
}

model Session {
  id        String   @id @default(uuid())
  expiresAt DateTime
  token     String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model Account {
  id                    String    @id @default(uuid())
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  @@index([userId])
}

model Verification {
  id         String   @id @default(uuid())
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([identifier])
}
